@@ -506,7 +506,7 @@ extern NODE_PTR tail;
 
 extern int idx_dot;
 extern int idx_tt;
-extern size_t idx_gt;
+extern int idx_gt;
 extern int idx_et;
 extern int idx_dc;
 
